test/asm/section-union-mismatch.err
error: Section already declared as fixed at different address $c000
    at section-union-mismatch.asm(2)
FATAL: Cannot create section "test" (1 error)
    at section-union-mismatch.asm(2)
